Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/SMAX_PS_Platform_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Object to record history of all Platform Events sent from the system.
This object is created as a backup / failsafe in case of connectivity problems.</description>
    <label>Platform Event Log</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Platform Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>