Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/fields/SMAX_PS_Action__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Action__c</fullName>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>