Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/fields/SMAX_PS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>