Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/fields/SMAX_PS_Event_JSON__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Event_JSON__c</fullName>
    <label>Event JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>