Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/fields/SMAX_PS_Platform_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Platform_Event_Type__c</fullName>
    <label>Platform Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>