Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/fields/SMAX_PS_Related_Element_Id__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Related_Element_Id__c</fullName>
    <externalId>true</externalId>
    <label>Related Element Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>