Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/fields/SMAX_PS_Replay_Id__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Replay_Id__c</fullName>
    <label>Replay Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>