Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Replay_Id__c</columns>
    <columns>SMAX_PS_Error_Message__c</columns>
    <columns>SMAX_PS_Platform_Event_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SMAX_PS_Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SMAX_PS_Related_Element_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>