Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/listViews/All_Platform_Event_Logs.listView-meta.xml
<ListView>
    <fullName>All_Platform_Event_Logs</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Platform_Event_Type__c</columns>
    <columns>SMAX_PS_Replay_Id__c</columns>
    <columns>SMAX_PS_Action__c</columns>
    <columns>SMAX_PS_Related_Element_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SMAX_PS_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMAX_PS_Platform_Event_Type__c</field>
        <operation>equals</operation>
        <value>SBQQ__Quote__c</value>
    </filters>
    <label>All Platform Event Logs</label>
</ListView>