Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/listViews/By_Replay_ID.listView-meta.xml
<ListView>
    <fullName>By_Replay_ID</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Action__c</columns>
    <columns>SMAX_PS_Replay_Id__c</columns>
    <columns>SMAX_PS_Error_Message__c</columns>
    <columns>SMAX_PS_Platform_Event_Type__c</columns>
    <columns>SMAX_PS_Related_Element_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMAX_PS_Replay_Id__c</field>
        <operation>equals</operation>
        <value>21102</value>
    </filters>
    <label>By Replay ID</label>
    <language>en_US</language>
</ListView>