Perkin-UAT/force-app/main/default/objects/SMAX_PS_Platform_Event_Log__c/listViews/Error_Logs.listView-meta.xml
<ListView>
    <fullName>Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Platform_Event_Type__c</columns>
    <columns>SMAX_PS_Action__c</columns>
    <columns>SMAX_PS_Error_Message__c</columns>
    <columns>SMAX_PS_Event_JSON__c</columns>
    <columns>SMAX_PS_Replay_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMAX_PS_Error_Message__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Error Logs</label>
    <language>en_US</language>
</ListView>